--- a/ROOT/build.html
+++ b/ROOT/build.html
@@ -21,8 +21,8 @@
 		<nav id="nav">
 			<div class="ym-hlist" >
 				<ul>
-					<li class="active"><strong>Home</strong></li>
-					<li><a href="build.html">Build</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li class="active"><a href="build.html"><strong>Build</strong></a></li>
 					<li><a href="connect.html">Connect</a></li>
 					<li><a href="improve.html">Improve</a></li>
 					<li><a href="innovate.html">Innovate</a></li>
