--- a/ROOT/connect.html
+++ b/ROOT/connect.html
@@ -21,9 +21,9 @@
 		<nav id="nav">
 			<div class="ym-hlist" >
 				<ul>
-					<li class="active"><strong>Home</strong></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="build.html">Build</a></li>
-					<li><a href="connect.html">Connect</a></li>
+					<li class="active"><a href="connect.html"><strong>Connect</strong></a></li>
 					<li><a href="improve.html">Improve</a></li>
 					<li><a href="innovate.html">Innovate</a></li>
 				</ul>
