--- a/ROOT/improve.html
+++ b/ROOT/improve.html
@@ -21,10 +21,10 @@
 		<nav id="nav">
 			<div class="ym-hlist" >
 				<ul>
-					<li class="active"><strong>Home</strong></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="build.html">Build</a></li>
 					<li><a href="connect.html">Connect</a></li>
-					<li><a href="improve.html">Improve</a></li>
+					<li class="active"><a href="improve.html"><strong>Improve</strong></a></li>
 					<li><a href="innovate.html">Innovate</a></li>
 				</ul>
 				<form class="ym-searchform">
