--- a/ROOT/innovate.html
+++ b/ROOT/innovate.html
@@ -21,11 +21,11 @@
 		<nav id="nav">
 			<div class="ym-hlist" >
 				<ul>
-					<li class="active"><strong>Home</strong></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="build.html">Build</a></li>
 					<li><a href="connect.html">Connect</a></li>
 					<li><a href="improve.html">Improve</a></li>
-					<li><a href="innovate.html">Innovate</a></li>
+					<li class="active"><a href="innovate.html"><strong>Innovate</strong></a></li>
 				</ul>
 				<form class="ym-searchform">
 					<input class="ym-searchfield" type="search" placeholder="Search..." />
