Updated copywrite on the footers.

--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -88,9 +88,9 @@
 							<img src="http://dummyimage.com/128x128/cccccc/fff.png" alt="ads" class="float-left bordered"/>
 							<img src="http://dummyimage.com/128x128/cccccc/fff.png" alt="ads" class="float-left bordered"/>
 						</div>
-						<h4>Widget</h4>
+						<h4>QuickLinks</h4>
 						<ul>
-							<li>Item 1</li>
+							<li><a href="http://localhost:8080/JSPWiki">Our wiki</a></li>
 							<li>Item 2</li>
 							<li>Item 3</li>
 							<li>Item 4</li>
@@ -101,7 +101,7 @@
 			</div>
 		</main>
 		<footer>
-			<p>© Company 2012 &ndash; Layout based on <a href="http://www.yaml.de">YAML</a></p>
+			<p>© Digital Spider 2014 &ndash; Layout based on <a href="http://www.yaml.de">YAML</a></p>
 		</footer>
 	</div>
 </div>
