--- a/ROOT/improve.html
+++ b/ROOT/improve.html
@@ -101,7 +101,7 @@
 			</div>
 		</main>
 		<footer>
-			<p>© Company 2012 &ndash; Layout based on <a href="http://www.yaml.de">YAML</a></p>
+			<p>© Digital Spider 2014 &ndash; Layout based on <a href="http://www.yaml.de">YAML</a></p>
 		</footer>
 	</div>
 </div>
