--- a/ROOT/connect.html
+++ b/ROOT/connect.html
@@ -26,6 +26,7 @@
 					<li class="active"><a href="connect.html"><strong>Connect</strong></a></li>
 					<li><a href="improve.html">Improve</a></li>
 					<li><a href="innovate.html">Innovate</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 				<form class="ym-searchform">
 					<input class="ym-searchfield" type="search" placeholder="Search..." />
@@ -38,22 +39,22 @@
 				<div class="ym-col1">
 					<div class="ym-cbox">
 						<section class="box info">
-							<h2>Main Content</h2>
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-							<a class="ym-button ym-next" href="#">Read More</a>
+							<h2>Connect IT</h2>
+							<p>If you already have existing IT infrastrucutre, but find that they don't talk to each other? Want to connect them together, or to Facebook, or JIRA. Give us a call and see if we will help. Connections can happen at the database, API, or WebService level. Or maybe it's just migration and consolidation. Either way we will look at the authentication mechanisms, the data structures, and the APIs available, and connect them up.</p>
+							<a class="ym-button ym-next" href="contact.html">Contact Us</a>
 						</section>
 						<section class="ym-grid linearize-level-2">
 							<article class="ym-g50 ym-gl">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
+									<h3>Knowledge Management</h3>
 									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
 								</div>
 							</article>
 							<article class="ym-g50 ym-gr">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
+									<h3>Java Integration</h3>
 									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
 								</div>
 							</article>
@@ -62,14 +63,14 @@
 							<article class="ym-g50 ym-gl">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
+									<h3>Database Integration</h3>
 									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
 								</div>
 							</article>
 							<article class="ym-g50 ym-gr">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
+									<h3>Custom Integration</h3>
 									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
 								</div>
 							</article>
@@ -90,11 +91,7 @@
 						</div>
 						<h4>Widget</h4>
 						<ul>
-							<li>Item 1</li>
-							<li>Item 2</li>
-							<li>Item 3</li>
-							<li>Item 4</li>
-							<li>Item 5</li>
+							<li><a href="http://digitalspider.com.au/JSPWiki">Our wiki</a></li>
 						</ul>
 					</div>
 				</aside>
