--- a/ROOT/build.html
+++ b/ROOT/build.html
@@ -26,6 +26,7 @@
 					<li><a href="connect.html">Connect</a></li>
 					<li><a href="improve.html">Improve</a></li>
 					<li><a href="innovate.html">Innovate</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 				<form class="ym-searchform">
 					<input class="ym-searchfield" type="search" placeholder="Search..." />
@@ -38,22 +39,22 @@
 				<div class="ym-col1">
 					<div class="ym-cbox">
 						<section class="box info">
-							<h2>Main Content</h2>
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-							<a class="ym-button ym-next" href="#">Read More</a>
+							<h2>Build IT</h2>
+							<p>Do you need a new website, a database, an android app? Want to get going using gmail or set up your own email server, start a new CRM, or launch a new eCommerce shop? We will help you find the right solution for you. Your solution may be onsite or in the cloud. We help you with researching, purchasing, installing, configuring, and getting it up and running for you.</p>
+							<a class="ym-button ym-next" href="contact.html">Contact Us</a>
 						</section>
 						<section class="ym-grid linearize-level-2">
 							<article class="ym-g50 ym-gl">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
+									<h3>New Website</h3>
 									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
 								</div>
 							</article>
 							<article class="ym-g50 ym-gr">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
+									<h3>Database Setup</h3>
 									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
 								</div>
 							</article>
@@ -62,14 +63,14 @@
 							<article class="ym-g50 ym-gl">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
+									<h3>Android App</h3>
 									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
 								</div>
 							</article>
 							<article class="ym-g50 ym-gr">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
+									<h3>Custom Development</h3>
 									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
 								</div>
 							</article>
@@ -90,11 +91,7 @@
 						</div>
 						<h4>Widget</h4>
 						<ul>
-							<li>Item 1</li>
-							<li>Item 2</li>
-							<li>Item 3</li>
-							<li>Item 4</li>
-							<li>Item 5</li>
+							<li><a href="http://digitalspider.com.au/JSPWiki">Our wiki</a></li>
 						</ul>
 					</div>
 				</aside>
