--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -26,6 +26,7 @@
 					<li><a href="connect.html">Connect</a></li>
 					<li><a href="improve.html">Improve</a></li>
 					<li><a href="innovate.html">Innovate</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 				<form class="ym-searchform">
 					<input class="ym-searchfield" type="search" placeholder="Search..." />
@@ -38,23 +39,32 @@
 				<div class="ym-col1">
 					<div class="ym-cbox">
 						<section class="box info">
-							<h2>Main Content</h2>
-							<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-							<a class="ym-button ym-next" href="#">Read More</a>
+							<h2>Welcome</h2>
+							<p>
+							We are a small Australian based startup company, specialising in Java Development and IT consulting. We aim to help Australian small and medium enterprises improve their IT offerings, using Open Source software.
+							Our areas of expertise include: Website development, knowledge management, integrations using Java, process management, eCommerce, and customising solutions to your needs.
+							Our business is built around the 4 following pillars:
+							<ul>
+								<li><a href="build.html">Build IT<a/></li>
+								<li><a href="connect.html">Connect IT<a/></li>
+								<li><a href="improve.html">Improve IT<a/></li>
+								<li><a href="innovate.html">Innovate IT<a/></li>
+							</p>
+							<a class="ym-button ym-next" href="contact.html">Contact Us</a>
 						</section>
 						<section class="ym-grid linearize-level-2">
 							<article class="ym-g50 ym-gl">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
-									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+									<h3><a href="build.html">Build IT</a></h3>
+									<p>Do you need a new website, a database, an android app? Want to get going using gmail or set up your own email server, start a new CRM, or launch a new eCommerce shop? We will help you find the right solution for you. Your solution may be onsite or in the cloud. We help you with researching, purchasing, installing, configuring, and getting it up and running for you.</p>
 								</div>
 							</article>
 							<article class="ym-g50 ym-gr">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
-									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+									<h3><a href="connect.html">Connect IT</a></h3>
+									<p>If you already have existing IT infrastrucutre, but find that they don't talk to each other? Want to connect them together, or to Facebook, or JIRA. Give us a call and see if we will help. Connections can happen at the database, API, or WebService level. Or maybe it's just migration and consolidation. Either way we will look at the authentication mechanisms, the data structures, and the APIs available, and connect them up.</p>
 								</div>
 							</article>
 						</section>
@@ -62,15 +72,15 @@
 							<article class="ym-g50 ym-gl">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
-									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+									<h3><a href="improve.html">Improve IT</a></h3>
+									<p>If you have much Java and/or Database applications, but find that they are running to slow, or running out of memory, or you just have too many Incidents in you ITIL, let us come in and find the root cause for you. We can add indexes, partitions, profile you java, install monitoring, or generally get you back to "business as usual". We can also do support and maintenance contracts.</p>
 								</div>
 							</article>
 							<article class="ym-g50 ym-gr">
 								<div class="ym-gbox">
 									<!-- content -->
-									<h3>Heading</h3>
-									<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+									<h3><a href="innovate.html">Innovate IT</a></h3>
+									<p>Want a challenge? Looking to grow and try something new. We are looking at Arduino, the Internet of Things, and ZigBee, Smart Homes, and other areas of new and exciting development. If you are adventurous and want a partner, let us know.</p>
 								</div>
 							</article>
 						</section>
@@ -90,11 +100,7 @@
 						</div>
 						<h4>QuickLinks</h4>
 						<ul>
-							<li><a href="http://localhost:8080/JSPWiki">Our wiki</a></li>
-							<li>Item 2</li>
-							<li>Item 3</li>
-							<li>Item 4</li>
-							<li>Item 5</li>
+							<li><a href="http://digitalspider.com.au/JSPWiki">Our wiki</a></li>
 						</ul>
 					</div>
 				</aside>
