--- a/ROOT/build.html
+++ b/ROOT/build.html
@@ -6,6 +6,18 @@
 	<!-- Mobile viewport optimisation -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/yaml/flexible-columns.css" rel="stylesheet" type="text/css"/>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-54223073-1', 'auto');
+  ga('send', 'pageview');
+</script>
+
 </head>
 <body>
 <ul class="ym-skiplinks">
