--- a/ROOT/contact.html
+++ b/ROOT/contact.html
@@ -79,6 +79,7 @@
 						<h4>QuickLinks</h4>
 						<ul>
 							<li><a href="http://digitalspider.com.au/JSPWiki">Our wiki</a></li>
+							<li><a href="http://digitalspider.com.au/testwiki">Test wiki</a></li>
 						</ul>
 					</div>
 				</aside>
