--- a/ROOT/build.html
+++ b/ROOT/build.html
@@ -104,6 +104,7 @@
 						<h4>Widget</h4>
 						<ul>
 							<li><a href="http://digitalspider.com.au/JSPWiki">Our wiki</a></li>
+							<li><a href="http://digitalspider.com.au/testwiki">Test wiki</a></li>
 						</ul>
 					</div>
 				</aside>
